refactor: extract common data plane api !275
